--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
       - name: Deploy to AWS S3
-        run: aws s3 sync build ${{secrets.React_Ecommerce_S3_Bucket}} --delete
+        run: aws s3 sync build s3://akm9-react-ecommerce --delete
 
